# radiointerferometryc99

./: Dockerfile  README.md  docker-compose.yaml  meson.build
include/: meson.build  radiointerferometryc99.h
include/radiointerferometryc99/: _geodesy.h  iers.h
src/: iers.c  meson.build  posangle.c  radiointerferometryc99.c
tests/: iers_finals2000A.snippet.all  iers_read.c  meson.build  posangle.c  posangle_reference.py
